fix: Handled dark mode

--- a/frappe/public/scss/common/buttons.scss
+++ b/frappe/public/scss/common/buttons.scss
@@ -62,7 +62,7 @@
 	background-color: var(--control-bg);
 	color: var(--text-color);
 	&:hover, &:active {
-		background-color: var(--gray-300);
+		background-color: var(--gray-500);
 		color: var(--text-color);
 	}
 }
